[gd_scene load_steps=18 format=3 uid="uid://b0k73epmrluo7"]

[ext_resource type="Script" path="res://world.gd" id="1_5gwao"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="2_48486"]
[ext_resource type="AudioStream" uid="uid://dt1q2apgk0egd" path="res://FluidSim/rain.mp3" id="2_oijl5"]
[ext_resource type="Texture2D" uid="uid://8y5ingrfor0w" path="res://icon.svg" id="3_usyxv"]
[ext_resource type="PackedScene" uid="uid://mg2q2tkoob2i" path="res://FluidSim/rain.tscn" id="4_gjuan"]
[ext_resource type="Texture2D" uid="uid://mybu5ck2xs2l" path="res://tileset.png" id="5_6vg20"]
[ext_resource type="Texture2D" uid="uid://bla0lu55dlkmf" path="res://bug.png" id="7_vbhoq"]

[sub_resource type="Animation" id="Animation_qw1a8"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.176471, 0.176471, 0.176471, 0.690196), Color(0.176471, 0.176471, 0.176471, 0)]
}

[sub_resource type="Animation" id="Animation_waxto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.176471, 0.176471, 0.176471, 0.690196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rain:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_cxx1c"]
resource_name = "normal_to_dark"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.176471, 0.176471, 0.176471, 0), Color(0.176471, 0.176471, 0.176471, 0.690196)]
}

[sub_resource type="Animation" id="Animation_1ckul"]
resource_name = "fade_to_rain"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rain:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 0.0]
}

[sub_resource type="Animation" id="Animation_r8hpm"]
resource_name = "rain_to_nothing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rain:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ed8e"]
_data = {
"RESET": SubResource("Animation_waxto"),
"fade_to_normal": SubResource("Animation_qw1a8"),
"fade_to_rain": SubResource("Animation_1ckul"),
"normal_to_dark": SubResource("Animation_cxx1c"),
"rain_to_nothing": SubResource("Animation_r8hpm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiv6c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dumtp"]
texture = ExtResource("5_6vg20")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:4/0 = 0
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -13.5, -32, -14)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -18, -13, -32, -14)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -14, 18.5, -14.5, -32, 32)
6:7/0 = 0
12:7/0 = 0
13:7/0 = 0
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:8/0 = 0
13:8/0 = 0
1:9/0 = 0
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0

[sub_resource type="TileSet" id="TileSet_5dxyk"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dumtp")

[sub_resource type="CircleShape2D" id="CircleShape2D_phmtc"]
radius = 26.8328

[node name="World" type="Node2D"]
script = ExtResource("1_5gwao")

[node name="Rain_screen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Rain_screen"]
offset_left = -122.0
offset_right = 1188.0
offset_bottom = 847.0
color = Color(0.176471, 0.176471, 0.176471, 0.690196)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rain_screen"]
libraries = {
"": SubResource("AnimationLibrary_7ed8e")
}

[node name="rain" type="AudioStreamPlayer2D" parent="Rain_screen"]
stream = ExtResource("2_oijl5")
volume_db = -80.0

[node name="Timer" type="Timer" parent="Rain_screen"]
wait_time = 10.0

[node name="music_off" type="Timer" parent="Rain_screen"]
wait_time = 2.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(558, 611)
script = ExtResource("2_48486")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_usyxv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_wiv6c")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="rain" parent="CharacterBody2D" instance=ExtResource("4_gjuan")]
position = Vector2(9, -1469)

[node name="Timer" type="Timer" parent="CharacterBody2D"]
wait_time = 30.0
autostart = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(1, 0)
tile_set = SubResource("TileSet_5dxyk")
format = 2
layer_0/tile_data = PackedInt32Array(655366, 0, 1, 655367, 65536, 1, 655368, 65536, 1, 655369, 65536, 1, 655370, 65536, 1, 655371, 131072, 1, 720902, 0, 2, 786438, 0, 2, 851974, 0, 2, 917510, 0, 2, 983046, 0, 3, 720903, 65536, 2, 720904, 65536, 2, 720905, 65536, 2, 720906, 65536, 2, 786439, 65536, 2, 786440, 65536, 2, 786441, 65536, 2, 786442, 65536, 2, 851978, 65536, 2, 851977, 65536, 2, 851976, 65536, 2, 851975, 65536, 2, 917511, 65536, 2, 917512, 65536, 2, 917513, 65536, 2, 917514, 65536, 2, 983047, 65536, 3, 983048, 65536, 3, 983049, 65536, 3, 983050, 65536, 3, 983051, 131072, 3, 917515, 131072, 2, 851979, 131072, 2, 786443, 131072, 2, 720907, 131072, 2)

[node name="bug_collectible" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="bug_collectible"]
texture = ExtResource("7_vbhoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bug_collectible"]
position = Vector2(3, -4)
shape = SubResource("CircleShape2D_phmtc")

[connection signal="timeout" from="Rain_screen/Timer" to="." method="_on_rain_stop_timeout"]
[connection signal="timeout" from="Rain_screen/music_off" to="." method="_on_music_off_timeout"]
[connection signal="timeout" from="CharacterBody2D/Timer" to="." method="_on_timer_timeout"]
